@@ -1,3 +1,8 @@
+2008-02-07  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs: Color
+	  styles are now in options.
+
 2008-02-06  Mike Krüger <mkrueger@novell.com> 
 
 	* Mono.TextEditor/TextEditor.cs: Worked on printing.
